# github-bot

./: .gitignore  README.md  pyproject.toml  run-fastapi.sh
github_bot/: asgi.py  config.py  github.py  schema.py  templates.py
